# seacharts

./: .gitignore  README.md  conda_requirements.txt  environment.yaml  pyproject.toml  requirements.no_gdal.txt  requirements.txt
notebooks/: .gitignore  kristiansund.ipynb  trondheim.ipynb
seacharts/: config.yaml  config_schema.yaml  enc.py
seacharts/core/: config.py  files.py  paths.py
seacharts/display/: display.py  features.py
